# absher-visa-agent

./: .replit  absher-visa-assistant 3.html  design_guidelines.md  package-lock.json  package.json  replit.md
attached_assets/: Pasted--1-Visa-Assistant-Landing-Screen-Goal-Introduce-the-ser_1765040876274.txt  Pasted--Absher-Style-Specification-Based-on-Screenshot-1-Color_1765040902429.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AppointmentSlotCard.tsx  CountryCard.tsx  Header.tsx  IconContainer.tsx  ProgressIndicator.tsx  RequestCard.tsx  RequirementItem.tsx  TravelerCard.tsx  TravelerDocCard.tsx  WorldMap.tsx
client/src/components/dynamic-fields/: AttachmentField.tsx  DynamicFieldsForm.tsx  EnumField.tsx  (+3 more)
client/src/hooks/: use-country-fields.ts
client/src/pages/: Landing.tsx  Step1.tsx  Step2.tsx  Step3.tsx  Success.tsx
python-agents/: .env.example  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
python-agents/data/prompts/: matcher_prompts.yaml  scraper_prompts.yaml  validator_prompts.yaml
python-agents/src/: __init__.py
python-agents/src/agents/: __init__.py  base.py  state.py
python-agents/src/agents/matcher/: __init__.py  agent.py
python-agents/src/agents/orchestrator/: __init__.py  agent.py
python-agents/src/agents/pdf_generator/: __init__.py  agent.py
python-agents/src/agents/scraper/: __init__.py  agent.py
python-agents/src/agents/validator/: __init__.py  agent.py
python-agents/src/api/: __init__.py  dependencies.py  main.py  middleware.py
python-agents/src/api/routes/: __init__.py  documents.py  health.py  visa_workflow.py
python-agents/src/api/schemas/: __init__.py  requests.py  responses.py
python-agents/src/config/: logging_config.py  settings.py
python-agents/src/core/: __init__.py  exceptions.py
python-agents/src/services/: __init__.py  node_backend.py
python-agents/src/services/cache/: __init__.py  memory.py
python-agents/src/utils/: __init__.py  arabic.py
python-agents/tests/: __init__.py  conftest.py  test_agents.py  test_api.py
server/: routes.ts  storage.ts  visaCache.ts
server/data/: country-fields.ts  embassy-instructions.ts  visa-cache.json  visa-map-cache.json
shared/: schema.ts
